Fix: picture distortion problem

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -56,6 +56,7 @@ header {
 
 .card img{
   height: 180px;
+  object-fit: cover;
 }
 
 .card-title{
